--- a/client/src/app.css
+++ b/client/src/app.css
@@ -2,3 +2,9 @@
   text-decoration: none;
   color: inherit;
 }
+@media screen and (max-width: 650px) {
+  html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+}
