--- a/client/src/components/blogs/blogs.css
+++ b/client/src/components/blogs/blogs.css
@@ -11,9 +11,13 @@
   column-gap: 50px;
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 650px) {
   .grid{
     width: 250px;
     grid-template-columns: 1fr;
   }
+  .blog-container{
+    margin: 0;
+  }
+
 }
