--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -32,10 +32,10 @@
 
 .center .item {
 	padding: 6px 5px;
-    margin: 0 20px;
+  margin: 0 20px;
 	font-size: 20px;
 	cursor: pointer;
-    position: relative;
+  position: relative;
 	transition: 0.1s ease-in;
 }
 .center .item:after {
@@ -75,10 +75,58 @@
 	color: #fff;
 	transition: 0.1s ease-out;
 }
+.menu i{
+	font-size: 40px;
+}
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 650px) {
 	.navbar .right, 
 	.navbar .center{
 		display: none;
+	}
+	.menu-container{
+		display: flex;
+		width: 50vw;
+		height: 100vh;
+		padding: 50px;
+		flex-direction: column;
+		position: fixed;
+		top:0;
+		right:-20px;
+		transform: translateX(calc(100% + 50px));
+		transition: 0.3s transform ease-in;
+		background-color: #fff;
+	}
+	.menu-container.show{
+		display: flex;
+		transform: translateX(0);
+		transition: 0.3s transform ease-out;
+	}
+
+	.closebtn{
+		position: absolute;
+		top: 30px;
+		right: 50px;
+	}
+	.closebtn i{
+		font-size: 30px;
+	}
+
+	.menu-container .item{
+		padding: 6px 5px;
+		margin: 5px 0;
+		font-size: 20px;
+	}
+	.item button {
+		width: 120px;
+		height: 36px;
+		border: 2px solid #3c5a5f;
+		border-radius: 5px;
+		font-weight: 500;
+		color: #3c5a5f;
+		font-size: 14px;
+		cursor: pointer;
+		font-family: "Rubik", sans-serif;
+		transition: 0.1s ease-in;
 	}
 }
